--- a/pubs.bib
+++ b/pubs.bib
@@ -24,7 +24,7 @@
   year =          2025,
   booktitle = apsys,
   title =         {ML-native Dataplane Operating Systems},
-   link = {papers/autokernel-apsys25.pdf},
+   link = {/papers/autokernel-apsys25.pdf},
   abstract = { Performance tuning has never been more critical in
                   modern datacenters, where rapid advances in
                   networking and I/O speeds expose potential
@@ -55,7 +55,7 @@
   year =          2025,
   booktitle = hotos,
   title =         {Apiary: An OS for the Modern FPGA},
-   link = {papers/apiary-hotos25.pdf},
+   link = {/papers/apiary-hotos25.pdf},
   abstract = { Many datacenter operators have deployed FPGAs as
                   hardware accelerators because their
                   reconfigurability allows them to be repurposed as
@@ -124,7 +124,7 @@
   year =          2023,
   booktitle = sosp,
   title =         {Cornflakes: Zero-copy Serialization for Microsecond-scale Networking},
-   link = {papers/cornflakes-sosp23.pdf},
+   link = {/papers/cornflakes-sosp23.pdf},
   abstract = { Data serialization is critical for many datacenter
                   applications, but the memory copies required to move
                   application data into packets are costly. Recent
@@ -157,7 +157,7 @@ Jialin Li},
   year =          2023,
   booktitle = apsys,
   title = {Capybara: Microsecond-Scale Live TCP Migration},
-   link = {papers/capybara-apsys23.pdf},
+   link = {/papers/capybara-apsys23.pdf},
   abstract = {Latency-critical us-scale data center applications are
                   susceptible to server load spikes. The issue is
                   particularly challenging for services using
@@ -184,7 +184,7 @@ Jialin Li},
   year =          2022,
   booktitle = hotcarbon,
   title =         {Treehouse: A Case For Carbon-Aware Datacenter Software},
-  link = {papers/treehouse-hotcarbon22.pdf},
+  link = {/papers/treehouse-hotcarbon22.pdf},
   abstract = {The end of Dennard scaling and the slowing of Moore's
                   Law has put the energy use of datacenters on an
                   unsustainable path. Datacenters are already a
@@ -216,7 +216,7 @@ Jialin Li},
   year =          2021,
   booktitle = sosp,
   title =         {The Demikernel Datapath OS Architecture for Microsecond-scale Datacenter Systems},
-  link = {papers/demikernel-sosp21.pdf},
+  link = {/papers/demikernel-sosp21.pdf},
   abstract = {Datacenter systems and I/O devices now run at
                   single-digit microsecond latencies, requiring
                   ns-scale operating systems. Traditional kernel-based
@@ -245,7 +245,7 @@ Jialin Li},
   year =          2021,
   booktitle = sosp,
   title =         {When Idling is Ideal: Optimizing Tail-Latency for Highly-Dispersed Datacenter Workloads with Persephone},
-  link = {papers/persephone-sosp21.pdf},
+  link = {/papers/persephone-sosp21.pdf},
   abstract = {This paper introduces Persephone, a kernel-bypass OS
                   scheduler designed to minimize tail latency for
                   applications executing at microsecond-scale and
@@ -276,7 +276,7 @@ Jialin Li},
   year =          2021,
   booktitle = sosp,
   title =         {PRISM: Rethinking the RDMA Interface for Distributed Systems},
-  link = {papers/prism-sosp21.pdf},
+  link = {/papers/prism-sosp21.pdf},
   abstract = {Remote Direct Memory Access (RDMA) has been used to
                   accelerate a variety of distributed systems, by
                   providing low-latency, CPU-bypassing access to a
@@ -343,7 +343,7 @@ Jialin Li},
                   latter provide a private, efficient mechanism for
                   users to learn, without polling, which logs have new
                   messages.},
-                  link={papers/talek-acsac20.pdf} }
+                  link={/papers/talek-acsac20.pdf} }
 
 
 
@@ -366,7 +366,7 @@ Jialin Li},
                   existing distributed in-memory storage systems into
                   persistent, crash-consistent versions with low
                   overhead and minimal code changes.},
-                  link={papers/persimmon-osdi20.pdf},
+                  link={/papers/persimmon-osdi20.pdf},
                   talk = {https://www.youtube.com/watch?v=yAnkRRPbhsM}
                   }
 
@@ -394,7 +394,7 @@ Jialin Li},
                   solutions and future research, with the goal of
                   securing RDMA datacenter systems while they are
                   still in the research and prototype stages.},
-                  link={papers/rdma-sec-hotcloud20.pdf} 
+                  link={/papers/rdma-sec-hotcloud20.pdf} 
                   }
 
 @InProceedings{marvin_atc,
@@ -427,7 +427,7 @@ Jialin Li},
                   reclaim memory over 60x faster than Android with a
                   Linux swap file can allocate memory under memory
                   pressure.  },
-   link={papers/marvin-atc20.pdf},
+   link={/papers/marvin-atc20.pdf},
    talk = {https://www.usenix.org/conference/atc20/presentation/lebeck}}
 
 
@@ -439,7 +439,7 @@ Jialin Li},
   title = {Meerkat: Multicore-scalable Replicated Transactions Following the Zero-Coordination Principle},
   year = 2020,
   booktitle = eurosys,
-    link = {papers/meerkat-eurosys20.pdf},
+    link = {/papers/meerkat-eurosys20.pdf},
   abstract = {Traditionally, the high cost of network communication
                   between servers has hidden the impact of cross-core
                   coordination in replicated systems. However, new
@@ -467,7 +467,7 @@ Jialin Li},
 @TechReport{hercules_tr,
   author =        { Niel Lebeck and Jonathan Goldstein and Irene Zhang},
    title =         { Hercules: A Multi-View Cache for Real-Time Interactive Apps},
-  link = {papers/hercules-tr19.pdf},
+  link = {/papers/hercules-tr19.pdf},
   abstract = {Existing distributed storage systems do not meet the
                   needs of real-time interactive apps. These apps
                   feature small groups of users making concurrent
@@ -535,7 +535,7 @@ Jialin Li},
                   optimization technology to make Ambrosia more
                   performant than many of today's non-resilient cloud
                   solutions.},
-link={papers/ambrosia-vldb19.pdf} }
+link={/papers/ambrosia-vldb19.pdf} }
 
 @InProceedings{leap_asplos,
   author =        {Huaicheng Li and Mingzhe Hao and Stanko Novakovic
@@ -562,7 +562,7 @@ link={papers/ambrosia-vldb19.pdf} }
                   and ARM cores and expose a virtual NVMe storage to
                   unmodified guest VMs, with a competitive speed to
                   bare-metal performance.},
-                  link={papers/leap-asplos20.pdf},
+                  link={/papers/leap-asplos20.pdf},
                   talk={https://www.youtube.com/watch?v=Gyn9eABQwTQ&list=PLsLWHLZB96VeVp3IVzvSH58ttVz_Anr7H&index=26&t=0s}}
 
 
@@ -603,7 +603,7 @@ link={papers/ambrosia-vldb19.pdf} }
                   transaction protocols that require replication with
                   strong consistency, TAPIR-KV has 2x better
                   latency and throughput.},
-link={papers/tapir-tocs18.pdf},
+link={/papers/tapir-tocs18.pdf},
 code={https://github.com/UWSysLab/tapir}
 }
 
@@ -615,7 +615,7 @@ code={https://github.com/UWSysLab/tapir}
   number =        {UW-CSE-2019-04-01},
   title =         {End the Senseless Killing: Improving Memory Management for Mobile Operating Systems},
   year =          2019,
-    link={papers/marvin-tr19.pdf},
+    link={/papers/marvin-tr19.pdf},
   abstract =      {To ensure low-latency memory allocation, mobile
                   operating systems needing memory kill applications
                   instead of swapping memory to disk.  This design
@@ -648,7 +648,7 @@ code={https://github.com/UWSysLab/tapir}
   title =         {Just In Time Delivery: Leveraging Operating Systems Knowledge for Better Datacenter Congestion Control},
   year =          2019,
   booktitle = hotcloud,
-  link = {papers/chimera-hotcloud19.pdf},
+  link = {/papers/chimera-hotcloud19.pdf},
   abstract = { Network links and server CPUs are heavily contended
                   resources in modern datacenters.  To keep tail
                   latencies low, datacenter operators drastically
@@ -684,7 +684,7 @@ code={https://github.com/UWSysLab/tapir}
   title =         {Breakfast of Champions: Towards Zero-Copy Serialization with NIC Scatter-Gather},
   year =          2021,
   booktitle = hotos,
-  link = {papers/cornflakes-hotos21.pdf},
+  link = {/papers/cornflakes-hotos21.pdf},
   abstract = {  Microsecond I/O will make data serialization a major
                   bottleneck for datacenter
                   applications. Serialization is fundamentally about
@@ -715,7 +715,7 @@ code={https://github.com/UWSysLab/tapir}
     Kernel-Bypass Era},
   year =          2019,
   booktitle = hotos,
-  link = {papers/demikernel-hotos19.pdf},
+  link = {/papers/demikernel-hotos19.pdf},
   abstract = {Researchers have long predicted the demise of the
                   operating system.  As datacenter servers
                   increasingly incorporate I/O devices that let
@@ -745,7 +745,7 @@ code={https://github.com/UWSysLab/tapir}
   school =       {University of Washington},
   month = 10,
   year =         2017,
-  link = {papers/thesis.pdf},
+  link = {/papers/thesis.pdf},
   abstract = {The convergence of ubiquitous mobile devices,
                   large-scale cloud platforms and pervasive network
                   connectivity have changed the face of modern user
@@ -789,7 +789,7 @@ code={https://github.com/UWSysLab/tapir}
   title =         {Making Consistency More Consistent: A Unified Model for Coherence, Consistency and Isolation},
   year =          2018,
   booktitle = papoc,
-  link = {papers/consistency-papoc18.pdf},
+  link = {/papers/consistency-papoc18.pdf},
   abstract = {  Ordering guarantees are often defined using abstract
   execution models. Unfortunately,
   these models are complex and make different assumptions about system
@@ -814,7 +814,7 @@ code={https://github.com/UWSysLab/tapir}
   title =         {Disciplined Inconsistency},
   year =          2016,
   booktitle = socc,
-  link = {papers/ipa-socc16.pdf},
+  link = {/papers/ipa-socc16.pdf},
   abstract = {Distributed applications and web services, such as online stores or social networks, are expected to be scalable, available, responsive, and fault-tolerant. To meet these steep requirements in the face of high round-trip latencies, network partitions, server failures, and load spikes, applications use eventually consistent datastores that allow them to weaken the consistency of some data. However, making this transition is highly error-prone because relaxed consistency models are notoriously difficult to understand and test.
 
 In this work, we propose a new programming model for distributed data that makes consistency properties explicit and uses a type system to enforce consistency safety. With the Inconsistent, Performance-bound, Approximate (IPA) storage system, programmers specify performance targets and correctness requirements as constraints on persistent data structures and handle uncertainty about the result of datastore reads using new consistency types. We implement a prototype of this model in Scala on top of an existing datastore, Cassandra, and use it to make performance/correctness tradeoffs in two applications: a ticket sales service and a Twitter clone. Our evaluation shows that IPA prevents consistency-based programming errors and adapts consistency automatically in response to changing network conditions, performing comparably to weak consistency and 2-10x faster than strong consistency. },
@@ -846,7 +846,7 @@ code={https://github.com/bholt/ipa}
                   applications, strengthens distributed data sharing
                   guarantees, and supports automated reactivity with
                   low performance overhead.  },
-  link ={papers/diamond-osdi16.pdf},
+  link ={/papers/diamond-osdi16.pdf},
   code={https://github.com/UWSysLab/diamond}}
 
 
@@ -857,7 +857,7 @@ code={https://github.com/bholt/ipa}
   year = 	 2016,
   month = 3,
   abstract={Today's replicated transactional storage systems typically have a layered architecture, combining protocols for transaction coordination, consistent replication, and concurrency control.  These systems generally require costly strongly-consistent replication protocols like Paxos, which assign a total order to all operations. To avoid this cost, we ask whether all replicated operations in these systems need to be strictly ordered. Recent research has yielded replication protocols that can avoid unnecessary ordering, e.g., by exploiting commutative operations, but it is not clear how to apply these to replicated transaction processing systems. We answer this question by analyzing existing transaction processing designs in terms of which replicated operations require ordering and which simply require fault tolerance.  We describe how this analysis leads to our recent work on TAPIR, a transaction protocol that efficiently provides strict serializability by using a new replication protocol that provides fault tolerance but not ordering for most operations.},
-link ={papers/ordering-data.pdf}
+link ={/papers/ordering-data.pdf}
 }
 
 @InProceedings{holt15_claret,
@@ -866,7 +866,7 @@ link ={papers/ordering-data.pdf}
   booktitle = papoc,
   year = 	 2015,
   month = 	 4,
-  link = {papers/claret-papoc15.pdf},
+  link = {/papers/claret-papoc15.pdf},
   abstract = {
 Out of the many NoSQL databases in use today, some that provide simple data structures for records, such as Redis and MongoDB, are now becoming popular. Building applications out of these complex data types provides a way to communicate intent to the database system without sacrificing flexibility or committing to a fixed schema. Currently this capability is leveraged in limited ways, such as to ensure related values are co-located, or for atomic updates. There are many ways data types can be used to make databases more efficient that are not yet being exploited.
 
@@ -910,7 +910,7 @@ We explore several ways of leveraging abstract data type (ADT) semantics in data
                   transaction protocols that require replication with
                   strong consistency, TAPIR-KV has 2x better
                   latency and throughput.},
-link ={papers/tapir-sosp15.pdf},
+link ={/papers/tapir-sosp15.pdf},
 code={https://github.com/UWSysLab/tapir},
 talk={https://www.youtube.com/watch?v=yE3eMxYJDiE}
 }
@@ -921,7 +921,7 @@ talk={https://www.youtube.com/watch?v=yE3eMxYJDiE}
   booktitle =  osdi,
   year = 	 2014,
   month = 10,
-  link ={papers/sapphire-osdi14.pdf},
+  link ={/papers/sapphire-osdi14.pdf},
   abstract={ Modern applications face new challenges in managing
                   today's highly distributed and heterogeneous
                   environment. For example, they must stitch together
@@ -951,7 +951,7 @@ talk={https://www.youtube.com/watch?v=yE3eMxYJDiE}
   booktitle =  osdi,
   year = 	 2014,
   month = 10,
-  link ={papers/arrakis-osdi14.pdf},
+  link ={/papers/arrakis-osdi14.pdf},
   abstract = {Recent device hardware trends enable a new approach to
                   the design of network server operating systems. In a
                   traditional operating system, the kernel mediates
@@ -983,7 +983,7 @@ talk= {https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rac
   year = 	 2015,
   month = 11,
   journal = tocs,
-  link ={papers/arrakis-tocs16.pdf},
+  link ={/papers/arrakis-tocs16.pdf},
   abstract = {Recent device hardware trends enable a new approach to
                   the design of network server operating systems. In a
                   traditional operating system, the kernel mediates
@@ -1012,7 +1012,7 @@ talk= {https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rac
   booktitle =  usenix_atc,
   year = 	 2013,
   month = 6,
-  link ={papers/vmrestore-atc13.pdf},
+  link ={/papers/vmrestore-atc13.pdf},
   abstract={   Cloud providers are increasingly looking to use virtual machine
   checkpointing for new applications beyond fault tolerance. Existing
   checkpointing systems designed for fault tolerance only optimize for
@@ -1047,7 +1047,7 @@ talk= {https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rac
   booktitle =  vee,
   year = 	 2011,
   month = 3,
-  link ={papers/vmrestore-vee11.pdf},
+  link ={/papers/vmrestore-vee11.pdf},
 abstract={ In order to make save and restore features practical, saved
                   virtual machines (VMs) must be able to quickly
                   restore to normal operation. Unfortunately, fetching
@@ -1091,7 +1091,7 @@ abstract={ In order to make save and restore features practical, saved
   booktitle =  nsdi,
   year = 	 2009,
   month = 4,
-  link = {papers/wfs-nsdi09.pdf},
+  link = {/papers/wfs-nsdi09.pdf},
  abstract={WheelFS is a wide-area distributed storage system intended
                   to help multi-site applications share data and gain
                   fault tolerance. WheelFS takes the form of a
@@ -1127,7 +1127,7 @@ abstract={ In order to make save and restore features practical, saved
   booktitle =  osdi,
   year = 	 2010,
   month = 10,
-link ={papers/txcache-osdi10.pdf},
+link ={/papers/txcache-osdi10.pdf},
  abstract={Distributed in-memory application data caches like
                   memcached are a popular solution for scaling
                   database-driven web sites. These systems are easy to
@@ -1166,7 +1166,7 @@ talk ={ https://www.usenix.org/legacy/events/osdi10/stream/ports/index.html}
   year = 	 2014,
   address = 	 {Philadelphia, PA, USA},
   month = 	 6,
-  link = {papers/arrakis-hotstorage14.pdf},
+  link = {/papers/arrakis-hotstorage14.pdf},
   abstract={We propose a radical re-architecture of the traditional
                   operating system storage stack to move the kernel
                   off the data path. Leveraging virtualized I/O
@@ -1186,7 +1186,7 @@ talk ={ https://www.usenix.org/legacy/events/osdi10/stream/ports/index.html}
   school =       {Massachusetts Institute of Technology},
   year =         2009,
   month= 6,
-  link ={papers/meng-thesis.pdf},
+  link ={/papers/meng-thesis.pdf},
   abstract={WheelFS is a wide-area distributed file system designed to
                   help applications cope with the challenges of
                   sharing data over the wide-area network. A wide
